--- a/app/views/layouts/_stylesheets.html.haml
+++ b/app/views/layouts/_stylesheets.html.haml
@@ -2,7 +2,7 @@
 -# = stylesheet_link_tag 'style', :media => 'all'
 = stylesheet_link_tag 'compiled/style.css', :media => 'all'
 = stylesheet_link_tag 'compiled/handheld.css', :media => 'handheld'
-
+= formtastic_stylesheet_link_tag
 
 -# Uncomment if you are specifically targeting less enabled mobile browsers
 -#= stylesheet_link_tag 'handheld', :media => 'handheld'
