--- a/app/views/students/_form.html.haml
+++ b/app/views/students/_form.html.haml
@@ -13,6 +13,9 @@
     = f.label :last_name
     = f.text_field :last_name
   .field
+    = f.label :email
+    = f.text_field :email
+  .field
     = f.label :bio
     = f.text_field :bio
   .field
