--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -4,6 +4,7 @@
   %tr
     %th First name
     %th Last name
+    %th Email
     %th Bio
     %th Date
     %th
@@ -14,6 +15,7 @@
     %tr
       %td= student.first_name
       %td= student.last_name
+      %td= student.email
       %td= student.bio
       %td= student.date
       %td= link_to 'Show', student
