--- a/app/views/students/_form.html.haml
+++ b/app/views/students/_form.html.haml
@@ -1,25 +1,15 @@
-= form_for @student do |f|
+= semantic_form_for @student do |f|
   -if @student.errors.any?
     #error_explanation
       %h2= "#{pluralize(@student.errors.count, "error")} prohibited this student from being saved:"
       %ul
         - @student.errors.full_messages.each do |msg|
           %li= msg
-
-  .field
-    = f.label :first_name
-    = f.text_field :first_name
-  .field
-    = f.label :last_name
-    = f.text_field :last_name
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :bio
-    = f.text_field :bio
-  .field
-    = f.label :date
-    = f.date_select :date
-  .actions
-    = f.submit 'Save'
+  - f.inputs do
+    = f.input :first_name
+    = f.input :last_name
+    = f.input :bio
+    = f.input :date
+    = f.input :email
+  - f.buttons do
+    = f.commit_button
