--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,22 +1,16 @@
-= form_for @message do |f|
+= semantic_form_for @message do |f|
   -if @message.errors.any?
     #error_explanation
       %h2= "#{pluralize(@message.errors.count, "error")} prohibited this message from being saved:"
       %ul
         - @message.errors.full_messages.each do |msg|
           %li= msg
+  - f.inputs do
+    = f.input :title
+    = f.input :description
+    = f.input :date
+    = f.input :type
+    = f.input :student_id, :as => :select, :collection => Student.all
 
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description
-    = f.text_field :description
-  .field
-    = f.label :date
-    = f.date_select :date
-  .field
-    = f.label :type
-    = f.text_field :type
-  .actions
-    = f.submit 'Save'
+  - f.buttons do
+    = f.commit_button
