Transformed the message description into a textarea.

--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -7,7 +7,7 @@
           %li= msg
   - f.inputs do
     = f.input :title
-    = f.input :description
+    = f.input :description, :as => :text
     = f.input :date
     = f.input :type
     = f.input :student_id, :as => :select, :collection => Student.all
