--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -7,6 +7,7 @@
     %th Email
     %th Bio
     %th Date
+    %th Degree
     %th
     %th
     %th
@@ -18,6 +19,7 @@
       %td= student.email
       %td= student.bio
       %td= student.date
+      %td= student.degree
       %td= link_to 'Show', student
       %td= link_to 'Edit', edit_student_path(student)
       %td= link_to 'Destroy', student, :confirm => 'Are you sure?', :method => :delete
