--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -1,47 +1,53 @@
-@import "compass/css3";
+@import compass/css3
 
 //-----------------------------------------------
 // The following html5-boilerplate styles should
 // probably be customized for each site
 //-----------------------------------------------
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6
   // Bold might not be the best choice if you are
   // embedding font faces that are already bold
-  font-weight: bold;
-}
+  font-weight: bold
 
-strong, th {
-  font-weight: bold;
-}
+strong, th
+  font-weight: bold
 
-small {
+small
   // Use font-size mixin to convert to percentage for YUI
   // http://developer.yahoo.com/yui/3/cssfonts/#fontsize
-  @include font-size(11px);  // approx 85% when base-font-size eq 13px
-}
+  +font-size(11px)
+  // approx 85% when base-font-size eq 13px
 
 // Add the 'required' attribute on your
 // inputs if you want to use these
-input:valid, textarea:valid {}
-input:invalid, textarea:invalid {
-  @include border-radius(1px);
-  @include box-shadow(red, 0, 0, 5px, 0);
-}
-.no-boxshadow input:invalid,
-.no-boxshadow textarea:invalid { background-color: #f0dddd; }
+input:valid, textarea:valid
 
+input:invalid, textarea:invalid
+  +border-radius(1px)
+  +box-shadow(red, 0, 0, 5px, 0)
+
+.no-boxshadow input:invalid,
+.no-boxshadow textarea:invalid
+  background-color: #f0dddd
 
 //-----------------------------------
 // Add your own custom styles below
 //-----------------------------------
 
-body {}
+body
+  width: 70%
+  margin: 0 auto
 
-#container {}
+#container
 
-header {}
+header
 
-#main {}
+#main
+  width: 90%
+  margin: 0 auto
 
-footer {}
+footer
+
+h1
+  :font-size 2em
