--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -1,8 +1,8 @@
 // First, set some default constants
-@import "partials/base";
+@import partials/base
 
 // Then we'll import the compass extension
-@import "html5-boilerplate";
+@import html5-boilerplate
 
 // Now you can choose to include the whole
 // enchilada by uncommeting this line
@@ -18,7 +18,7 @@
 
 // Or else, you can import this partial if you
 // want more controll over which mixins to use
-@import "partials/example";
+@import partials/example
 
 // Finally, put your own styles in this partial
-@import "partials/page";
+@import partials/page
