Added some basic styling to the tables (row stripping ftw!).

--- a/public/stylesheets/compiled/style.css
+++ b/public/stylesheets/compiled/style.css
@@ -398,3 +398,12 @@ body {
 h1 {
   font-size: 2em;
 }
+
+/* line 56, ../../../app/stylesheets/partials/_page.sass */
+table tr td {
+  padding: 1em;
+}
+/* line 58, ../../../app/stylesheets/partials/_page.sass */
+table tr:nth-child(even) {
+  background: #eeeeee;
+}
