--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,1 +1,7 @@
 %h1=link_to "Dear Full Sail,", "/"
+-# = semantic_form_for @student do |f|
+-#   - f.inputs do
+-#     = f.input :email
+-#     = f.input :password
+-#   - f.buttons do
+-#     = f.commit_button
