--- a/app/views/students/_form.html.haml
+++ b/app/views/students/_form.html.haml
@@ -11,6 +11,7 @@
     = f.input :bio
     = f.input :date
     = f.input :email
+    = f.input :password
     = f.input :degree_id, :as => :select, :collection => Degree.all
     
   - f.buttons do
