--- a/app/views/votes/edit.html.haml
+++ b/app/views/votes/edit.html.haml
@@ -1,2 +1,6 @@
-%h1 Votes#edit
-%p Find me in app/views/votes/edit.html.haml
+%h1 Edit Vote
+= render 'form'
+
+= link_to 'Show', @vote
+\|
+= link_to 'Back', votes_path
