--- a/app/views/votes/index.html.haml
+++ b/app/views/votes/index.html.haml
@@ -3,7 +3,7 @@
 %table
   %tr
     %th Name
-    %th Initials
+    %th Id
     %th
     %th
     %th
@@ -11,7 +11,7 @@
   - @votes.each do |vote|
     %tr
       %td= vote.student
-      %td= vote.message
+      %td= vote.id
       %td= link_to 'Show', vote
-      %td= link_to 'Edit', edit_vote_path(degree)
+      %td= link_to 'Edit', edit_vote_path(vote)
       %td= link_to 'Destroy', vote, :confirm => 'Are you sure?', :method => :delete
