And we have site-wide authentication links based on sign_in state. Loveliness.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,10 @@
 %h1=link_to "Dear Full Sail,", "/"
+%ul
+  - if current_student
+    %li= link_to 'Sign Out', destroy_student_session_path
+  - else
+    %li= link_to 'Sign In', new_student_session_path
+  
 -# = semantic_form_for @student do |f|
 -#   - f.inputs do
 -#     = f.input :email
