--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -1,6 +1,3 @@
-// First, set some default constants
-@import partials/base
-
 // Then we'll import the compass extension
 @import html5-boilerplate
 
@@ -20,5 +17,11 @@
 // want more controll over which mixins to use
 @import partials/example
 
+// First, set some default constants
+@import partials/base
+
 // Finally, put your own styles in this partial
 @import partials/page
+
+// Adding fonts
+@import partials/fonts
