--- a/public/stylesheets/compiled/style.css
+++ b/public/stylesheets/compiled/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* line 27, ../../../../../../.rvm/gems/ruby-1.9.2-p0@rails3app/gems/html5-boilerplate-0.2.6/stylesheets/html5-boilerplate/_reset.scss */
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -347,22 +348,44 @@ nav ul, nav li {
 @media all and (orientation:portrait) {}
 @media all and (orientation:landscape) {}
 @media screen and (max-device-width: 480px) {}
-/* line 8, ../../../app/stylesheets/partials/_page.sass */
+/* line 7, ../../../app/stylesheets/partials/_base.sass */
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
+  font-family: Georgia, serif;
 }
 
-/* line 13, ../../../app/stylesheets/partials/_page.sass */
+/* line 13, ../../../app/stylesheets/partials/_base.sass */
 strong, th {
   font-weight: bold;
 }
 
-/* line 16, ../../../app/stylesheets/partials/_page.sass */
+/* line 16, ../../../app/stylesheets/partials/_base.sass */
+a {
+  text-decoration: none;
+  color: black;
+}
+/* line 19, ../../../app/stylesheets/partials/_base.sass */
+a:link, a:visited {
+  color: black;
+}
+/* line 21, ../../../app/stylesheets/partials/_base.sass */
+a:hover, a:focus {
+  color: orange;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+}
+
+/* line 24, ../../../app/stylesheets/partials/_base.sass */
+ul {
+  list-style: none;
+  margin-left: 0;
+}
+
+/* line 28, ../../../app/stylesheets/partials/_base.sass */
 small {
   font-size: 85%;
 }
 
-/* line 26, ../../../app/stylesheets/partials/_page.sass */
+/* line 38, ../../../app/stylesheets/partials/_base.sass */
 input:invalid, textarea:invalid {
   -moz-border-radius: 1px;
   -webkit-border-radius: 1px;
@@ -376,49 +399,148 @@ input:invalid, textarea:invalid {
   box-shadow: red 0 0 5px 0;
 }
 
-/* line 30, ../../../app/stylesheets/partials/_page.sass */
+/* line 42, ../../../app/stylesheets/partials/_base.sass */
 .no-boxshadow input:invalid,
 .no-boxshadow textarea:invalid {
   background-color: #f0dddd;
 }
 
-/* line 38, ../../../app/stylesheets/partials/_page.sass */
+/* line 7, ../../../app/stylesheets/partials/_page.sass */
 body {
-  width: 70%;
+  width: 960px;
   margin: 0 auto;
 }
 
-/* line 46, ../../../app/stylesheets/partials/_page.sass */
+/* line 12, ../../../app/stylesheets/partials/_page.sass */
+#container > header {
+  padding: 2em 1em;
+}
+/* line 14, ../../../app/stylesheets/partials/_page.sass */
+#container > header > h1 {
+  font-size: 3em;
+  width: 80%;
+  float: left;
+}
+/* line 18, ../../../app/stylesheets/partials/_page.sass */
+#container > header > ul {
+  list-style: none;
+  margin: 0;
+  float: right;
+  display: block;
+  width: 20%;
+  line-height: 2em;
+  text-align: right;
+}
+/* line 26, ../../../app/stylesheets/partials/_page.sass */
+#container > header > ul > li {
+  padding: 0 1em;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+/* line 30, ../../../app/stylesheets/partials/_page.sass */
 #main {
   width: 90%;
-  margin: 0 auto;
+  margin: 3em auto;
+  clear: both;
 }
-
-/* line 52, ../../../app/stylesheets/partials/_page.sass */
-h1 {
+/* line 34, ../../../app/stylesheets/partials/_page.sass */
+#main > h1 {
   font-size: 2em;
+  padding: 1em 1em 0.25em 0;
+  margin: 0 0 0.5em 0;
+  border-bottom: 1px solid black;
 }
-
-/* line 57, ../../../app/stylesheets/partials/_page.sass */
-table tr th .title {
-  width: 30%;
+/* line 39, ../../../app/stylesheets/partials/_page.sass */
+#main .newmessage {
+  float: right;
+  margin-top: -3em;
 }
-/* line 59, ../../../app/stylesheets/partials/_page.sass */
-table tr th .description {
-  width: 20%;
-  background: blue;
+/* line 43, ../../../app/stylesheets/partials/_page.sass */
+#main ul li {
+  display: block;
+  clear: both;
+  border-bottom: 2px solid white;
+  margin-bottom: 1em;
+  overflow: hidden;
 }
-/* line 63, ../../../app/stylesheets/partials/_page.sass */
-table tr td {
-  padding: 1em;
+/* line 50, ../../../app/stylesheets/partials/_page.sass */
+#main ul li .vote {
+  display: block;
+  float: left;
+  width: 4%;
+  padding: 0.5em 0;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 5px 0 0 5px;
+  color: white;
+  text-align: center;
+  font-size: 1.3em;
+}
+/* line 60, ../../../app/stylesheets/partials/_page.sass */
+#main ul li .vote a {
+  display: block;
+  margin: 15px 0;
+  color: white;
 }
 /* line 65, ../../../app/stylesheets/partials/_page.sass */
-table tr:nth-child(even) {
-  background: #eeeeee;
+#main ul li article {
+  float: left;
+  width: 95%;
+  padding: 0;
+  border-right: 1px solid white;
+}
+/* line 70, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article header {
+  padding: 0 2em;
+}
+/* line 72, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article header h1 {
+  display: block;
+  clear: both;
+  font-size: 2em;
+}
+/* line 76, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article header p {
+  clear: left;
+}
+/* line 78, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article section {
+  padding: 0.5em 2em;
+}
+/* line 80, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article footer {
+  text-align: right;
+  padding: 0.5em 1em 1em;
+}
+/* line 83, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article footer a {
+  display: block;
+  float: right;
+  clear: both;
+  margin: 1em;
 }
 
-/* line 74, ../../../app/stylesheets/partials/_page.sass */
+/* line 99, ../../../app/stylesheets/partials/_page.sass */
 form .formtastic fieldset {
   overflow: hidden;
   background: blue;
+}
+
+@font-face {
+  font-family: "Pictos";
+  src: url("/fonts/pictos-web.eot");
+  src: local("☺"), url("/fonts/pictos-web.woff") format("woff"), url("/fonts/pictos-web.ttf") format("truetype"), url("/fonts/pictos-web.svg#webfontphKv1xv9") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* line 8, ../../../app/stylesheets/partials/_fonts.sass */
+.icon {
+  display: block;
+}
+/* line 10, ../../../app/stylesheets/partials/_fonts.sass */
+.icon:before {
+  font: 1em/0 "Pictos";
+  content: attr(data-icon);
+  font-weight: normal;
+  display: block;
 }
