--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,7 @@
 %h1=link_to "Dear Full Sail,", "/"
 %ul
   - if current_student
+    %li= link_to 'New Message', new_message_path
     %li= link_to 'Sign Out', destroy_student_session_path
   - else
     %li= link_to 'Sign In', new_student_session_path
