--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,4 @@
-%h1 Listing messages
-%button{ :class => 'newmessage' }= link_to 'New Message', new_message_path
+-# %h1 Listing messages
 
 %ul
   - @messages.each do |message|
