Modified the link color on hover and added bold on the current student's name.

--- a/app/stylesheets/partials/_base.sass
+++ b/app/stylesheets/partials/_base.sass
@@ -20,7 +20,7 @@ a
     :color black
   &:hover, &:focus
     :color orange
-    :text-shadow 0 1px 0 transparentize(black, .5)
+    :text-shadow 0 1px 1px transparentize(black, .3)
 ul
   :list-style none
   :margin-left 0
