--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -26,6 +26,8 @@ body
       >li
         :padding 0 1em
         :background transparentize(black, .9)
+        &.name
+          :font-weight bold
 
 #main
   :width 90%
