--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 %h1=link_to "Dear Full Sail,", "/"
 %ul
   - if current_student
-    %li.name= current_student.first_name + " " + current_student.last_name
+    %li.name= link_to current_student.first_name + " " + current_student.last_name, edit_student_path(current_student.id)
     %li= link_to 'New Message', new_message_path
     %li= link_to 'Sign Out', destroy_student_session_path
   - else
