--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -25,5 +25,5 @@
       %td= link_to 'Destroy', student, :confirm => 'Are you sure?', :method => :delete
 
 %br
-- if can? :create, @student
-  = link_to 'New Student', new_student_path
+-# - if can? :create, @students
+= link_to 'New Student', new_student_path
