--- a/app/views/layouts/_javascripts.html.haml
+++ b/app/views/layouts/_javascripts.html.haml
@@ -36,3 +36,16 @@
      g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
      s.parentNode.insertBefore(g, s);
     })(document, 'script');
+    
+:javascript
+  var clicky = { log: function(){ return; }, goal: function(){ return; }};
+  var clicky_site_id = 66365275;
+  (function() {
+    var s = document.createElement('script');
+    s.type = 'text/javascript';
+    s.async = true;
+    s.src = ( document.location.protocol == 'https:' ? 'https://static.getclicky.com/js' : 'http://static.getclicky.com/js' );
+    ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+  })();
+  <a title="Web Analytics" href="http://getclicky.com/66365275"></a>
+  <noscript><p><img alt="Clicky" width="1" height="1" src="http://in.getclicky.com/66365275ns.gif" /></p></noscript>
