--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -10,10 +10,10 @@ body
 
 #container
   >header
-    :padding 2em 1em
+    :padding 2em 1em 3em
     >h1
       :font-size 3em
-      :width 80%
+      :width 70%
       :float left
     >ul
       :list-style none
@@ -24,10 +24,15 @@ body
       :line-height 2em
       :text-align right
       >li
+        :float left
         :padding 0 1em
-        :background transparentize(black, .9)
+        :background transparentize(black, .2)
+        :border-radius 5px
+        :margin 1em .5em
         &.name
           :font-weight bold
+        a:link, a:visited
+          :color #ccc
 
 #main
   :width 90%
@@ -73,12 +78,32 @@ body
           :padding 0 2em
           h1
             :display block
+            :float left
+            :width 80%
             :clear both
             :font-size 2em
-          p
-            :clear left
+          .degree
+            :float right
+            :display block
+            :width 10%
+            :margin-top 4px
+            :padding 7px 0 5px
+            :text-align center
+            :font-weight bold
+            :font-size 1.2em
+            :opacity .7
+            :background #ccc
+            :color #000
+            :border-radius 5px
+            :-webkit-transform rotate(5deg)
+            :-moz-transform rotate(5deg)
+            :o-transform rotate(5deg)
+            :transform rotate(5deg)
         section
+          :width 80%
+          :clear left
           :padding .5em 2em
+          :font-size 1.3em
         footer
           :text-align right
           :padding .5em 1em 1em
@@ -90,7 +115,25 @@ body
 
 
 footer
-  
+  p
+    :text-align right
+    :font-size 1.4em
+    :margin-bottom 3em
+    :opacity .5
+    :-webkit-transition opacity 200ms ease-out
+    :-moz-transition opacity 200ms ease-out
+    :-o-transition opacity 200ms ease-out
+    :transition opacity 200ms ease-out
+    &:hover 
+      :opacity 1
+      :-webkit-transition opacity 200ms ease-in
+      :-moz-transition opacity 200ms ease-in
+      :-o-transition opacity 200ms ease-in
+      :transition opacity 200ms ease-in
+    img
+      :vertical-align middle
+      :margin-top -5px
+      :margin-left .25em
 
 //-----------------------------------  
 // Forms
