--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,2 +1,3 @@
 %small.copyright
-  Copyright &copy; #{Date.today.year}
+  -# Copyright &copy; #{Date.today.year}
+  %p crafted by full sailors from #{link_to image_tag( 'cleverCode.png'), 'http://clevercode.net'}
