--- a/public/stylesheets/compiled/style.css
+++ b/public/stylesheets/compiled/style.css
@@ -413,12 +413,12 @@ body {
 
 /* line 12, ../../../app/stylesheets/partials/_page.sass */
 #container > header {
-  padding: 2em 1em;
+  padding: 2em 1em 3em;
 }
 /* line 14, ../../../app/stylesheets/partials/_page.sass */
 #container > header > h1 {
   font-size: 3em;
-  width: 80%;
+  width: 70%;
   float: left;
 }
 /* line 18, ../../../app/stylesheets/partials/_page.sass */
@@ -433,33 +433,40 @@ body {
 }
 /* line 26, ../../../app/stylesheets/partials/_page.sass */
 #container > header > ul > li {
+  float: left;
   padding: 0 1em;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  margin: 1em 0.5em;
 }
-/* line 29, ../../../app/stylesheets/partials/_page.sass */
+/* line 32, ../../../app/stylesheets/partials/_page.sass */
 #container > header > ul > li.name {
   font-weight: bold;
 }
+/* line 34, ../../../app/stylesheets/partials/_page.sass */
+#container > header > ul > li a:link, #container > header > ul > li a:visited {
+  color: #cccccc;
+}
 
-/* line 32, ../../../app/stylesheets/partials/_page.sass */
+/* line 37, ../../../app/stylesheets/partials/_page.sass */
 #main {
   width: 90%;
   margin: 3em auto;
   clear: both;
 }
-/* line 36, ../../../app/stylesheets/partials/_page.sass */
+/* line 41, ../../../app/stylesheets/partials/_page.sass */
 #main > h1 {
   font-size: 2em;
   padding: 1em 1em 0.25em 0;
   margin: 0 0 0.5em 0;
   border-bottom: 1px solid black;
 }
-/* line 41, ../../../app/stylesheets/partials/_page.sass */
+/* line 46, ../../../app/stylesheets/partials/_page.sass */
 #main .newmessage {
   float: right;
   margin-top: -3em;
 }
-/* line 45, ../../../app/stylesheets/partials/_page.sass */
+/* line 50, ../../../app/stylesheets/partials/_page.sass */
 #main ul li {
   display: block;
   clear: both;
@@ -467,7 +474,7 @@ body {
   margin-bottom: 1em;
   overflow: hidden;
 }
-/* line 52, ../../../app/stylesheets/partials/_page.sass */
+/* line 57, ../../../app/stylesheets/partials/_page.sass */
 #main ul li .vote {
   display: block;
   float: left;
@@ -479,43 +486,63 @@ body {
   text-align: center;
   font-size: 1.3em;
 }
-/* line 62, ../../../app/stylesheets/partials/_page.sass */
+/* line 67, ../../../app/stylesheets/partials/_page.sass */
 #main ul li .vote a {
   display: block;
   margin: 15px 0;
   color: white;
 }
-/* line 67, ../../../app/stylesheets/partials/_page.sass */
+/* line 72, ../../../app/stylesheets/partials/_page.sass */
 #main ul li article {
   float: left;
   width: 95%;
   padding: 0;
   border-right: 1px solid white;
 }
-/* line 72, ../../../app/stylesheets/partials/_page.sass */
+/* line 77, ../../../app/stylesheets/partials/_page.sass */
 #main ul li article header {
   padding: 0 2em;
 }
-/* line 74, ../../../app/stylesheets/partials/_page.sass */
+/* line 79, ../../../app/stylesheets/partials/_page.sass */
 #main ul li article header h1 {
   display: block;
+  float: left;
+  width: 80%;
   clear: both;
   font-size: 2em;
 }
-/* line 78, ../../../app/stylesheets/partials/_page.sass */
-#main ul li article header p {
-  clear: left;
+/* line 85, ../../../app/stylesheets/partials/_page.sass */
+#main ul li article header .degree {
+  float: right;
+  display: block;
+  width: 10%;
+  margin-top: 4px;
+  padding: 7px 0 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  opacity: 0.7;
+  background: #cccccc;
+  color: black;
+  border-radius: 5px;
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  o-transform: rotate(5deg);
+  transform: rotate(5deg);
 }
-/* line 80, ../../../app/stylesheets/partials/_page.sass */
+/* line 102, ../../../app/stylesheets/partials/_page.sass */
 #main ul li article section {
+  width: 80%;
+  clear: left;
   padding: 0.5em 2em;
+  font-size: 1.3em;
 }
-/* line 82, ../../../app/stylesheets/partials/_page.sass */
+/* line 107, ../../../app/stylesheets/partials/_page.sass */
 #main ul li article footer {
   text-align: right;
   padding: 0.5em 1em 1em;
 }
-/* line 85, ../../../app/stylesheets/partials/_page.sass */
+/* line 110, ../../../app/stylesheets/partials/_page.sass */
 #main ul li article footer a {
   display: block;
   float: right;
@@ -523,7 +550,33 @@ body {
   margin: 1em;
 }
 
-/* line 101, ../../../app/stylesheets/partials/_page.sass */
+/* line 118, ../../../app/stylesheets/partials/_page.sass */
+footer p {
+  text-align: right;
+  font-size: 1.4em;
+  margin-bottom: 3em;
+  opacity: 0.5;
+  -webkit-transition: opacity 200ms ease-out;
+  -moz-transition: opacity 200ms ease-out;
+  -o-transition: opacity 200ms ease-out;
+  transition: opacity 200ms ease-out;
+}
+/* line 127, ../../../app/stylesheets/partials/_page.sass */
+footer p:hover {
+  opacity: 1;
+  -webkit-transition: opacity 200ms ease-in;
+  -moz-transition: opacity 200ms ease-in;
+  -o-transition: opacity 200ms ease-in;
+  transition: opacity 200ms ease-in;
+}
+/* line 133, ../../../app/stylesheets/partials/_page.sass */
+footer p img {
+  vertical-align: middle;
+  margin-top: -5px;
+  margin-left: 0.25em;
+}
+
+/* line 144, ../../../app/stylesheets/partials/_page.sass */
 form .formtastic fieldset {
   overflow: hidden;
   background: blue;
