--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -13,18 +13,20 @@ body
     :padding 2em 1em 3em
     >h1
       :font-size 3em
-      :width 70%
+      :width 60%
       :float left
     >ul
       :list-style none
       :margin 0
       :float right
       :display block
-      :width 20%
+      :width 40%
       :line-height 2em
       :text-align right
       >li
         :float left
+        :text-align right
+        :display inline-block
         :padding 0 1em
         :background transparentize(black, .2)
         :border-radius 5px
@@ -101,10 +103,13 @@ body
             :transform rotate(5deg)
         section
           :width 80%
+          :float left
           :clear left
           :padding .5em 2em
           :font-size 1.3em
         footer
+          :float left
+          :width 5%
           :text-align right
           :padding .5em 1em 1em
           a
